--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,17 @@
 
 <div id="main">
 
+    <form>
+        <input v-model="title" type="text" name="title" placeholder="title">
+        <input v-model="description" type="text" name="description" placeholder="description">
+        <input v-model="username" type="text" name="username" placeholder="username">
+       
+        <input @change="handleChange" type="file" name="file" id="file" class="input-file" accept="image/*">
+        <label for="file">Choose a file</label>
+
+        <button @click="handleClick">Submit</button>
+    </form>
+
     <div class="grid-container">
         <div class="box-container" v-for="image in images">
             <img class="images" :src="image.url">
