--- a/public/index.html
+++ b/public/index.html
@@ -38,11 +38,21 @@
         <div>
         <h1 >{{title}}</h1>
         <p>{{description}}</p>
+        <p>Uploaded by {{username}} on {{timestamp}}.</p> 
         <img :src="url">
+        <comment-form></comment-form>
         
-        <p>Uploaded by {{username}} at {{timestamp}}.</p> 
         </div>
     </div>
+</script>
+<script id="form" type="text/x-template">
+    <div>
+    <p>Comment</p>
+    <input type="text">
+    <p>Username</p>
+    <input type="text">
+    <button>Submit</button>
+</div>
 </script>
 
     <script src="/js/vue.js"></script>
