--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <form id="img-form">
         <div class="first-row">
         <input class="black-border"  v-model="title" type="text" placeholder="title">
-        <textarea class="black-border" v-model="description" id="description" type="text" name="description" placeholder="description">
+        <textarea class="black-border" v-model="description" type="text" name="description" placeholder="description">
         </textarea>
         <input class="black-border" v-model="username" type="text" name="username" placeholder="username">
         </div>
